--- a/theapp/package.json
+++ b/theapp/package.json
@@ -2,6 +2,9 @@
   "name": "theapp",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "6.11.1"
+  }
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
